--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Odin Recipes</h1>
+    <p><a HREF="recipes/lasagna.html">Lasagna</a></p>
+    <p><a HREF="recipes/ramen.html">Ramen</a></p>
+</body>
+</html>
